--- a/src/app/menu-navigation/menu-navigation.component.html
+++ b/src/app/menu-navigation/menu-navigation.component.html
@@ -7,12 +7,12 @@
     <mat-nav-list>
       <a mat-list-item *ngIf="!estaIniciado" href="/auth/inicioSesion">Inicio de sesión</a>
       <a mat-list-item *ngIf="!estaIniciado" href="/auth/registro">Registro</a>
-      <a mat-list-item (click)="cerrarSesion()">Cerrar Sesion</a>
+      <a mat-list-item *ngIf="estaIniciado" (click)="cerrarSesion()">Cerrar Sesion</a>
 
       <a mat-list-item *ngIf="estaIniciado" href="/administracion">Administración</a><!-- hay problemas con la selección administrador -->
       <a mat-list-item *ngIf="estaIniciado"href="/bienvenida">Bienvenida</a>
       <a mat-list-item *ngIf="estaIniciado" href="/galeria">Galería</a>
-      <a mat-list-item  href="/home">Home</a>
+      <a mat-list-item *ngIf="!estaIniciado" href="/home">Home</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -27,11 +27,17 @@
       </button>
       <span>Galería de fotos</span>
     </mat-toolbar>
-    <!-- 
+    
     <button (click)="estaLog()">estaLog</button>
     <button (click)="esAD()">esAdmin</button>
-     -->
+    
 
     <router-outlet></router-outlet>
+
+<div *ngIf="(usuario$ | async) as usuario">
+    <h1>id usu actual:{{usuario}}</h1>
+    <h1>rol usu actual:{{usuario}}</h1>
+</div>
+
   </mat-sidenav-content>
 </mat-sidenav-container>
