--- a/src/app/administracion/administracion.component.html
+++ b/src/app/administracion/administracion.component.html
@@ -1,4 +1,5 @@
 <h1><b>Administración de Usuarios</b></h1>
+<button class="btn btn-success" (click)="crearUsuario()">Crear Usuario</button>
 <div *ngIf="(usuarios$ | async) as usuarios">
     <table class="table table-striped table-dark">
         <thead>
