fin rutas terminado

--- a/src/app/menu-navigation/menu-navigation.component.html
+++ b/src/app/menu-navigation/menu-navigation.component.html
@@ -9,10 +9,8 @@
       <a mat-list-item *ngIf="!estaIniciado" href="/auth/registro">Registro</a>
       <a mat-list-item *ngIf="estaIniciado" (click)="cerrarSesion()">Cerrar Sesion</a>
 
-      <a mat-list-item *ngIf="esAdmin && estaIniciado" href="/administracion">Administración</a><!-- hay problemas con la selección administrador -->
-      <a mat-list-item *ngIf="estaIniciado" href="/bienvenida">Bienvenida</a>
+      <a mat-list-item *ngIf="esAdmin && estaIniciado" href="/administracion">Administración</a>
       <a mat-list-item *ngIf="estaIniciado" href="/galeria">Galería</a>
-      <a mat-list-item *ngIf="!estaIniciado" href="/home">Home</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -27,10 +25,6 @@
       </button>
       <span>Galería de fotos</span>
     </mat-toolbar>
-    <!-- 
-    <button (click)="estaLog()">estaLog</button>
-    <button (click)="esAD()">esAdmin</button>
-     -->   
 
     <router-outlet></router-outlet>
 
