fin 1.0.3 eliminar img

--- a/src/app/menu-navigation/menu-navigation.component.html
+++ b/src/app/menu-navigation/menu-navigation.component.html
@@ -23,7 +23,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">Menú</mat-icon>
       </button>
-      <span>Galería de fotos</span>
+      <span>Galería de Imagenes</span>
     </mat-toolbar>
 
     <router-outlet></router-outlet>
