--- a/src/app/galeria/galeria.component.html
+++ b/src/app/galeria/galeria.component.html
@@ -10,6 +10,9 @@
       <div *ngFor="let image of images" class="col">
         <div class="card h-100">
           <img [src]="image" class="card-img-top" alt="...">
+          <div class="d-grid">
+            <button (click)="eliminarArchivo(image)" class="btn btn-danger">Eliminar</button>
+        </div>    
         </div>
       </div>
     </div>
